--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
-
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "aos": "^2.3.4",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
-    "tailwindcss": "^4.1.11"
+    "react-scroll": "^1.9.3",
+    "react-simple-icons": "^1.0.0-beta.5",
+    "swiper": "^11.2.10",
+    "tailwindcss": "^4.1.11",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
